--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+{
+background-color: #101010; 
+}
+
 h1 {
   font-family: ubuntu;
   font-size: 50px;
   text-align: center;
-  color: darkslategray;
+  color: #dfdfdf;
 
 }
 
@@ -10,7 +14,7 @@ h3 {
   font-family: ubuntu;
   font-size: 30px;
   text-align: left;
-  color: darkslategray;
+  color: #dfdfdf;
 
 }
 
@@ -18,7 +22,7 @@ h4 {
   font-family: ubuntu;
   font-size: 24px;
   text-align: left;
-  color: darkslategray;
+  color: #dfdfdf;
 
 }
 
@@ -26,7 +30,7 @@ p {
   font-family: ubuntu;
   font-size: 20px;
   text-align: left;
-  color: darkslategray;
+  color: #dfdfdf;
 
 }
 
@@ -34,7 +38,7 @@ ol {
   font-family: ubuntu;
   font-size: 20px;
   text-align: left;
-  color: darkslategray;
+  color: #dfdfdf;
 
 }
 
@@ -42,6 +46,6 @@ ul {
   font-family: ubuntu;
   font-size: 20px;
   text-align: left;
-  color: darkslategray;
+  color: #dfdfdf;
 
 }
